--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-.gradle/
-build/
-.idea/workspace.xml
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+src/generated
